# videoMaker

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/evan/videomaker/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/evan/videomaker/: MainActivity.kt
app/src/main/java/com/evan/videomaker/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/evan/videomaker/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
img2mp4/: build.gradle  ios_build_fat.sh
img2mp4/src/main/java/com/evan/img2mp4/: EglEnv.kt  EncodeProgram.kt  GLEncodeCore.kt  GLFunction.kt  Img2Mp4.kt  MuxAudioVideo.kt  TextureExt.kt  VideoEncoder.kt  VideoExt.kt
libaac/: .gitignore  CMakeLists.txt  build.gradle
libaac/src/main/cpp/: Makefile  config.h  config.status  libtool
libaac/src/main/cpp/frontend/: main.c
libaac/src/main/cpp/libfaac/: quantize.c
libaac/src/main/java/com/evan/aac/: AACEncoder.kt
liblame/: CMakeLists.txt  build.gradle
liblame/src/main/cpp/frontend/: main.c  main.h
liblame/src/main/cpp/libmp3lame/: util.h
liblame/src/main/java/com/evan/aac/: Lame.kt
liblame/src/main/java/com/evan/lame/: Lame.kt
